<resources>
    <string name="app_name" translatable="false">NovaModa</string>
    <string name="register">Register</string>
    <string name="create_your_account">Create Your account</string>
    <string name="background_intro" translatable="false">Background intro</string>

    <string name="name">\tName</string>
    <string name="email">\tEmail</string>
    <string name="password">\tPassword</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login To Your\nAccount</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="name_is_require">Name is Require</string>
    <string name="phone_number_is_require">Phone number is required</string>
    <string name="oops_your_password_is_not_correct">oops! Your Password is Not Correct</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_a_account_register">Don’t have a account?</string>
    <string name="new_password">Create New Password</string>
    <string name="please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email">Please,enter your email address.You will receive a link to create a new password via email.</string>
    <string name="send">Send</string>
    <string name="phone">Phone</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorite">favorite</string>
    <string name="profile">Profile</string>
    <string name="nova_moda" translatable="false">\t Nova Moda</string>
    <string name="search_now">Search now</string>
    <string name="filter" translatable="false">filter</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="remove_from_bag">Remove from Bag</string>
    <string name="cancel">Cancel</string>
    <string name="what_are_you_search_products">What are you search products</string>
    <string name="qty">QTY</string>
    <string name="edit">Edit</string>
    <string name="language">Language</string>
    <string name="change_password">Change Password</string>
    <string name="logout">LogOut</string>
    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="modes">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login With Google</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="google_sign_in_failed_msg">Google sign in failed, please retry again later</string>
    <string name="generic_error_msg">Error, Please try again later.</string>
    <string name="old_password">Old Password</string>
    <string name="enter_current_password">Enter Current Password</string>


</resources>