<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/shopping_cart_24"
        android:title="@string/shop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bagFragment"
        android:icon="@drawable/outline_shopping_bag_24"
        android:title="@string/bag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/favorite_border_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />


</menu>