<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="resetViewModel"
            type="com.holeCode.novamoda.ui.fragments.forget_password.ForgetPasswordViewModel" />
    </data>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/forget_background_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:layout_width="80dp"
                android:layout_height="4dp"
                android:layout_margin="16dp"
                android:background="@color/m_gray" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metrophobic"
                android:padding="@dimen/_15sp"
                android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTilforget"
                style="@style/authInputTil"
                app:helperText="*"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_emailforget"
                    style="@style/authInput"
                    android:drawableStart="@drawable/baseline_email_24"
                    android:hint="@string/email"
                    android:text="@={resetViewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send"
                style="@style/button_auth"
                android:onClickListener="@{() -> resetViewModel.sendUpdatePasswordEmail()}"
                android:text="@string/send" />
        </LinearLayout>
</layout>