<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".auth.ForgetPasswordActivity">

        <TextView
            android:id="@+id/forgetPasswrod"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/forget_password"
            android:padding="10dp"
            android:textSize="35sp"
            android:textStyle="bold|normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.086" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metrophobic"
            android:padding="15dp"
            android:text="@string/please_enter_your_email_address_you_will_receive_a_link_to_create_a_new_password_via_email"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.297" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_emailforget"
            android:layout_width="343dp"
            android:layout_height="64dp"
            android:background="@drawable/desgin_edittext"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/baseline_email_24"
            android:hint="@string/email"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:background="@drawable/btn_background"
            android:text="@string/send"
            android:gravity="center"
            android:textColor="@color/status_text_color"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.723" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>