<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.holeCode.novamoda.ui.fragments.change_password.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forget_background_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".ui.fragments.change_password.ChangePasswordFragment"
        android:padding="@dimen/_15dp">
        <View
            android:layout_width="80dp"
            android:layout_height="4dp"
            android:layout_margin="16dp"
            android:background="@color/m_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtYourCurrent_changePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textColor="@color/g_icon_tint"
            android:fontFamily="@font/metrophobic"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_currentPassword"
            android:layout_width="@dimen/_343dp"
            android:layout_height="@dimen/_64dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_password_toggle"
            android:drawablePadding="5dp"
            android:hint="@string/enter_current_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="15dp"
            android:text="@={model.currentPass}"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtYourNew_changePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/g_icon_tint"
            android:fontFamily="@font/metrophobic"
            android:layout_marginTop="10dp"
            android:text="@string/new_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_newPassword"
            android:layout_width="@dimen/_343dp"
            android:layout_height="@dimen/_64dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_edittext"
            android:drawableStart="@drawable/ic_password_toggle"
            android:drawablePadding="5dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:padding="15dp"
            android:text="@={model.newPass}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChangePasswordChange"
            style="@style/button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginTop="20dp"
            android:onClick="@{()->model.changePass()}" />

    </LinearLayout>
</layout>