<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.holeCode.novamoda.ui.fragments.login.LoginViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".ui.fragments.login.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/loading_wheel"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="100dp"
                android:focusable="true"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarmain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="16dp"
                android:theme="@style/AppToolbarStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/metrophobic"
                    android:textSize="35sp"
                    android:textStyle="bold|normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.119"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.086" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/laProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarmain"
                app:layout_constraintVertical_bias="0.0">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/novamoda_logo" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTilLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:gravity="center"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_emailLogin"
                        android:layout_width="343dp"
                        android:layout_height="64dp"
                        android:background="@drawable/desgin_edittext"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:hint="@string/email"
                        android:padding="5dp"
                        android:text="@={loginViewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passworrdTilLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_PasswordLogin"
                        android:layout_width="343dp"
                        android:layout_height="64dp"
                        android:autofillHints="Password"
                        android:background="@drawable/desgin_edittext"
                        android:backgroundTint="@color/white"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:text="@={loginViewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_background"
                    android:enabled="false"
                    android:gravity="center"
                    android:onClick="@{() -> loginViewModel.login()}"
                    android:text="@string/login"
                    android:textColor="@color/status_text_color"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_forgetPasswrod"
                    android:layout_width="190dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@drawable/desgin_edittext"
                    android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                    android:text="@string/forgot_your_password"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="@dimen/_10dp"
                        android:text="@string/don_t_have_a_account_register"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/btn_create_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|bottom"
                        android:layout_marginTop="@dimen/_20dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/primary_color"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/or"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/black" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_google"
                    android:layout_width="343dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/background_edittext"
                    android:drawableStart="@drawable/google_icon"
                    android:text="@string/login_with_google"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_facebook"
                    android:layout_width="343dp"
                    android:layout_height="57dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10dp"
                    android:background="@drawable/background_edittext"
                    android:drawableStart="@drawable/facebook_icon"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/black"
                    android:textAllCaps="false" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>