<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.holeCode.novamoda.ui.fragments.register.RegisterViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        tools:context=".ui.fragments.register.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarmain"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/metrophobic"
                    android:text=""
                    android:textSize="35sp"
                    android:textStyle="bold|normal" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:padding="@dimen/_5dp"
                    android:src="@drawable/novamoda_logo" />

            </androidx.appcompat.widget.Toolbar>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/laProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarmain"
                app:layout_constraintVertical_bias="0.0">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imagePerson"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/_10dp"
                    android:src="@drawable/baseline_account_circle_24" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameTil"
                    style="@style/authInputTil"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_nameSign"
                        style="@style/authInput"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/baseline_person_24"
                        android:hint="@string/name"
                        android:text="@={registerViewModel.name}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneTil"
                    style="@style/authInputTil"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    app:prefixText="+02">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_phoneSign"
                        style="@style/authInput"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/baseline_phone_24"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:text="@={registerViewModel.phone}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTil"
                    style="@style/authInputTil"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_emailSign"
                        style="@style/authInput"
                        android:layout_gravity="center"
                        android:background="@drawable/desgin_edittext"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={registerViewModel.email}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTil"
                    style="@style/authInputTil"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/red"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:helperText="*"
                    app:helperTextTextColor="@color/red"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_PasswordSing"
                        style="@style/authInput"
                        android:autofillHints="Password"
                        android:drawableStart="@drawable/baseline_lock_24"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={registerViewModel.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_LoginAccount"
                    android:layout_width="230dp"
                    android:layout_height="27dp"
                    android:layout_gravity="right"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/desgin_edittext"
                    android:drawableEnd="@drawable/baseline_arrow_right_alt_24"
                    android:text="@string/already_have_an_account"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/button_auth"
                    android:background="@drawable/btn_background"
                    android:text="@string/register" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>